# car_demo

./: .gitignore  .hgignore  CMakeLists.txt  Dockerfile  README.md  build_demo.bash  ros_entrypoint.sh  rosdocker.bash  run_demo.bash
aws/: aws_s3_user.bash  cloudsim_deploy.bash  deploy-ec2.bash  run-local.bash
aws/startup/: Xorg.service  install.bash  xorg.conf
car_demo/: CMakeLists.txt  package.xml
car_demo/launch/: demo.launch
car_demo/models/mcity/meshes/: mcity.mtl
car_demo/models/mcity/meshes/Mcity/: GuardRail.mtl  Mcity.mtl  Mcity_NoRoad.mtl  OverheadSign_02.mtl  RailRoadGate.mtl  RailRoadGate_Extension.mtl
car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh  gazebo_ros_block_laser.cpp
car_demo/rviz/: demo.rviz
car_demo/worlds/: mcity.world
cmake/: setup.sh.in
docker/: .dockerignore  Dockerfile  __build.bash  _in_container_entry.bash  build-base.bash  build-pc.bash  cloudsim_deploy.bash  deploy-ec2.bash  run-to-build.bash
docker/cloudsim-sim-base/: Dockerfile  build.bash  cloudsim-sim-entry.bash
docker/precious/: Dockerfile  aws_s3_user.bash  build.bash  prius.ign  start-precious.bash
docker/simulation-base/: Dockerfile  build.bash
models/: CMakeLists.txt
models/prius_hybrid/: model.sdf  model.sdf.erb
models/raceway/meshes/: Raceway.mtl
models/sonoma_raceway_box/: model.config  model.sdf
models/sonoma_raceway_box/materials/scripts/: sonomay_raceway.material
plugins/: CMakeLists.txt  MaxTimeToLive.cc  MaxTimeToLive.hh  PriusData.hh  PriusHybridPlugin.cc  PriusHybridPlugin.hh  PriusLogger.cc  PriusLogger.hh  UploadDataPlugin.cc  UploadDataPlugin.hh  upload.bash  upload.py
prius_description/: CMakeLists.txt  package.xml
prius_description/launch/: display.launch  gazebo.launch
prius_description/meshes/: Hybrid.mtl  prius_all.dae
prius_description/rviz/: demo.rviz  urdf.rviz
prius_description/urdf/: prius.urdf
prius_msg_converter/: CMakeLists.txt  package.xml
prius_msg_converter/include/: to_cmd_vel.hpp
prius_msg_converter/launch/: to_cmd_vel.launch
prius_msg_converter/src/: to_cmd_vel.cpp  to_cmd_vel_node.cpp
prius_msgs/: CMakeLists.txt
prius_msgs/msg/: Control.msg
prius_plugin/: CMakeLists.txt  package.xml
prius_plugin/models/mcity/meshes/Mcity/: OverheadSign_01.mtl  OverheadSign_Base.mtl  OverheadSign_Extension.mtl  StreetLamp_Short.mtl  StreetLamp_Tall.mtl  TrafficBarrel.mtl
prius_plugin/models/raceway/: model.config  model.sdf
prius_plugin/models/raceway/meshes/: Raceway.mtl
prius_plugin/models/stop_light/: model.config  model.sdf
prius_plugin/models/stop_light/meshes/: stop_light.mtl
prius_plugin/models/stop_light/meshes/StopLight/: StopLight_Post.mtl
prius_plugin/models/street_light/: model.config  model.sdf
prius_plugin/models/street_light/meshes/: street_light.mtl
prius_plugin/nodes/: joystick_translator
prius_plugin/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
prius_plugin/worlds/: CMakeLists.txt  mcity.world  prius.world  sonoma_raceway_box.world
ros_opengl/: Dockerfile  build_base.bash
worlds/: prius.world  raceway.world  sonoma_raceway_box.world
