<?xml version="1.0"?>
<package format="2">
  <name>prius_msg_converter</name>
  <version>0.0.1</version>
  <description>The prius_msg_converter package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>roscpp</depend>
  <depend>prius_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

</package>
