<package format="2">
  <name>car_demo</name>
  <version>0.0.1</version>
  <description>
  The car demo
  </description>
  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
  <license>BSD</license>
  <build_depend>catkin</build_depend>
  <depend>gazebo_ros</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
